--- a/sass/partials/_sidebar.scss
+++ b/sass/partials/_sidebar.scss
@@ -607,6 +607,7 @@
   ul {
     li {
       display: flex;
+      align-items: center;
       gap: 16px;
       margin-bottom: 0px;
       padding: 40px 0;
@@ -652,17 +653,16 @@
         .latest-post-title {
           margin-bottom: 8px;
           font-size: 24px;
-          font-weight: 700;
+          font-weight: 500;
           line-height:  34px;
           color: $secondary-color;
           font-family: $heading-font;
           margin-bottom: 0;
-          margin-top: 8px;
 
           a {
             font-family: $heading-font;
             font-size: 24px;
-            font-weight: 700;
+            font-weight: 500;
             line-height:  34px;
             color: $black;
             position: relative;
